<resources>
    <string name="app_name">Weather App</string>

    <string name="main_title">How\'s the Weather Out There?</string>
    <string name="main_enter">Enter Your City\'s Name:</string>
    <string name="main_hint">(No spaces please!)</string>
    <string name="main_structure">ex. santabarbara,us</string>
    <string name="main_search">Search</string>
    
    <string name="today_title">Today\'s Weather</string>
    <string name="today_city">City Name: </string>
    <string name="today_weather_large">Weather Description: </string>
    <string name="today_weather">Description: </string>
    <string name="today_temp">Temperature: </string>
    <string name="today_humid">Humidity: </string>
    <string name="today_wind">Wind Speed: </string>
    <string name="today_forecast">See 5 Day Forecast</string>
    <string name="today_sample"> </string>
    
    <string name="five_title">5 Day Forecast</string>
    <string name="five_date">Date: </string>
    <string name="five_weather_large">Weather Description: </string>
    <string name="five_weather">Description: </string>
    <string name="five_temp">Temperature: </string>
    <string name="five_sample"> </string>
</resources>
