<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.trackr.ashedden.weatherapp.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sun"/>

    <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="80dp"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:paddingTop="50dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_enter"
            android:paddingRight="20dp"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/edittext"
            android:background="@android:color/white"
            android:layout_toRightOf="@+id/text"
            android:layout_alignBaseline="@+id/text"
            android:padding="5dp"
            android:textSize="20dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext"
        android:text="@string/main_search"/>

</LinearLayout>
