<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.trackr.ashedden.weatherapp.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sun"/>

    <TextView
        android:id="@+id/five_title"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_title"
        android:textSize="80dp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="30dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2,3">

            <View
                android:layout_height="2dip"
                android:background="@color/orange"
                android:layout_marginBottom="20dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/five_date"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:text="@string/five_weather"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:text="@string/five_temp"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/five_date1"
                    android:layout_column="1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/five_weather1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/five_temp1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/orange"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/five_date"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:text="@string/five_weather"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:text="@string/five_temp"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/five_date2"
                    android:layout_column="1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/five_weather2"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/five_temp2"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/orange"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/five_date"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:text="@string/five_weather"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:text="@string/five_temp"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/five_date3"
                    android:layout_column="1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/five_weather3"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/five_temp3"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/orange"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/five_date"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:text="@string/five_weather"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:text="@string/five_temp"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/five_date4"
                    android:layout_column="1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/five_weather4"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/five_temp4"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/orange"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/five_date"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:text="@string/five_weather"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:text="@string/five_temp"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/five_date5"
                    android:layout_column="1"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/five_weather5"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/five_temp5"
                    android:text="@string/five_sample"
                    android:padding="3dip"
                    android:textSize="25dp"
                    android:textColor="@android:color/black" />
            </TableRow>
            <View
                android:layout_height="2dip"
                android:background="@color/orange"
                android:layout_marginTop="20dp"/>
        </TableLayout>
    </ScrollView>
</LinearLayout>
